Adicionar seleção de elementos do formulário

--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
       src="https://kit.fontawesome.com/0ef2909734.js"
       crossorigin="anonymous"
     ></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
