--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <form id="form" class="form">
-        <div class="form-control error">
+        <div class="form-control">
           <label for="username">Nome de usuário</label>
           <input
             type="text"
@@ -31,7 +31,7 @@
           <small>Mensagem de erro</small>
         </div>
 
-        <div class="form-control error">
+        <div class="form-control">
           <label for="email">Email</label>
           <input type="text" id="email" placeholder="Digite seu email..." />
           <i class="fas fa-exclamation-circle"></i>
@@ -39,7 +39,7 @@
           <small>Mensagem de erro</small>
         </div>
 
-        <div class="form-control success">
+        <div class="form-control">
           <label for="password">Senha</label>
           <input type="text" id="password" placeholder="Digite sua senha..." />
           <i class="fas fa-exclamation-circle"></i>
