--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="form-control">
           <label for="password">Senha</label>
-          <input type="text" id="password" placeholder="Digite sua senha..." />
+          <input type="password" id="password" placeholder="Digite sua senha..." />
           <i class="fas fa-exclamation-circle"></i>
           <i class="fas fa-check-circle"></i>
           <small>Mensagem de erro</small>
@@ -50,7 +50,7 @@
         <div class="form-control">
           <label for="password-confirmation">Confirmação de senha</label>
           <input
-            type="text"
+            type="password"
             id="password-confirmation"
             placeholder="Digite a senha novamente..."
           />
